fix overflow error

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -288,9 +288,6 @@ label {
 	border-bottom: 5px solid white;
 	text-align: center;
 	font-size: 20px;
-  max-width : 100vw;
-  overflow-x: auto;
-  white-space: nowrap;
 }
 
 .entry-row {
@@ -302,9 +299,6 @@ label {
 	text-align: center;
 	text-align: center;
 	font-size: 15px;
-  max-width : 100vw;
-  overflow-x: auto;
-  white-space: nowrap;
 }
 
 .header-row:after {
